--- a/Views/confirmation.html
+++ b/Views/confirmation.html
@@ -16,8 +16,8 @@
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img id="logo-image" src="logo.png" alt="Logo" class="img-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
         </a>
         <ul class="navbar-nav flex-row ms-auto">
             <li class="nav-item me-5">
@@ -50,7 +50,7 @@
               <p><strong>Booking #:</strong> ABC123</p>
               <p><strong>Client Name:</strong> John Doe</p>
               <p><strong>Stylist:</strong> Liam Jenning</p>
-              <p><strong>Service:</strong> Haircut</p>
+              <p><strong>Service:</strong> Haircut, Styling</p>
               <p><strong>Date/Time:</strong> 2024-06-10, 10:00 AM</p>
             </div>
           </div>
