--- a/Views/contact.html
+++ b/Views/contact.html
@@ -16,8 +16,8 @@
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img id="logo-image" src="logo.png" alt="Logo" class="img-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
         </a>
         <ul class="navbar-nav flex-row ms-auto">
             <li class="nav-item me-5">
@@ -59,13 +59,13 @@
     <div class="row">
       <div class="col-md-6 text-center">
         <h2 class="mb-2">Salon Hours</h2>
-        <p>Monday: 9:00 - 17:00</p>
-        <p>Tuesday: 9:00 - 17:00</p>
-        <p>Wednesday: 9:00 - 18:00</p>
-        <p>Thursday: 9:00 - 18:00</p>
-        <p>Friday: 9:00 - 18:00</p>
-        <p>Saturday: 10:00 - 17:00</p>
-        <p>Sunday: Closed</p>
+        <p><strong>Monday:</strong> 9:00 - 17:00</p>
+        <p><strong>Tuesday:</strong> 9:00 - 17:00</p>
+        <p><strong>Wednesday:</strong> 9:00 - 18:00</p>
+        <p><strong>Thursday:</strong> 9:00 - 18:00</p>
+        <p><strong>Friday:</strong> 9:00 - 18:00</p>
+        <p><strong>Saturday:</strong> 10:00 - 17:00</p>
+        <p><strong>Sunday:</strong> Closed</p>
       </div>
       <div class="col-md-6 text-center">
         <h2 class="mb-2">Salon Address</h2>
