--- a/Views/services.html
+++ b/Views/services.html
@@ -16,8 +16,8 @@
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img id="logo-image" src="logo.png" alt="Logo" class="img-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
         </a>
         <ul class="navbar-nav flex-row ms-auto">
             <li class="nav-item me-5">
@@ -51,9 +51,9 @@
             <h3 class="card-title text-center">Shave</h3>
             <p>Experience a traditional and refreshing shave, leaving your skin smooth and rejuvenated.</p>
             <ul>
-                <li>Beard fade: $15</li>
-                <li>Head shave: $30</li>
-                <li>Hot shave: $20</li>
+                <li><strong>Beard fade:</strong> $15</li>
+                <li><strong>Head shave:</strong> $30</li>
+                <li><strong>Hot shave:</strong> $20</li>
             </ul>
           </div>
         </div>
@@ -65,10 +65,10 @@
             <h3 class="card-title text-center">Haircut</h3>
             <p>Transform your look with our expert hair cutting and styling services, tailored to suit your individual style and preferences.</p>
             <ul>
-                <li>Woman’s haircut: $55</li>
-                <li>Kid’s haircut: $25</li>
-                <li>Men’s haircut: $40</li>
-                <li>Bangs: $15</li>
+                <li><strong>Woman’s haircut:</strong> $55</li>
+                <li><strong>Kid’s haircut:</strong> $25</li>
+                <li><strong>Men’s haircut:</strong> $40</li>
+                <li><strong>Bangs:</strong> $15</li>
             </ul>
           </div>
         </div>
@@ -80,9 +80,9 @@
             <h3 class="card-title text-center">Styling</h3>
             <p>Elevate your hairstyle with our professional styling techniques, whether you're looking for sleek sophistication or casual elegance.</p>
             <ul>
-                <li>Blowout: from $50</li>
-                <li>Heat styling: from $35</li>
-                <li>Bridal: from $350</li>
+                <li><strong>Blowout:</strong> from $50</li>
+                <li><strong>Heat styling:</strong> from $35</li>
+                <li><strong>Bridal:</strong> from $350</li>
               </ul>
           </div>
         </div>
@@ -96,8 +96,8 @@
             <h3 class="card-title text-center">Perms</h3>
             <p>Achieve beautiful and long-lasting curls or waves with our perm services, adding volume and texture to your hair.</p>
             <ul>
-                <li>Full perm: $100</li>
-                <li>Specialty perm: $125</li>
+                <li><strong>Full perm:</strong> $100</li>
+                <li><strong>Specialty perm:</strong> $125</li>
               </ul>
           </div>
         </div>
@@ -109,8 +109,8 @@
             <h3 class="card-title text-center">Straightening</h3>
             <p>Say goodbye to frizz and hello to silky-smooth locks with our hair straightening treatments, leaving your hair effortlessly sleek and manageable.</p>
             <ul>
-                <li>Curl reduction: $130</li>
-                <li>Thermal curl service: $300</li>
+                <li><strong>Curl reduction:</strong> $130</li>
+                <li><strong>Thermal curl service:</strong> $300</li>
             </ul>
           </div>
         </div>
@@ -122,10 +122,10 @@
             <h3 class="card-title text-center">Coloring</h3>
             <p>Enhance your natural beauty or try something new with our range of hair coloring services, from subtle highlights to bold and vibrant hues.</p>
             <ul>
-                <li>Color: from $90</li>
-                <li>Full highlights: $120</li>
-                <li>Partial highlights: $65</li>
-                <li>Grey blending: $30</li>
+                <li><strong>Color:</strong> from $90</li>
+                <li><strong>Full highlights:</strong> $120</li>
+                <li><strong>Partial highlights:</strong> $65</li>
+                <li><strong>Grey blending:</strong> $30</li>
               </ul>
           </div>
         </div>
