--- a/Views/booking.html
+++ b/Views/booking.html
@@ -7,100 +7,106 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-    </style>
+  </style>
 </head>
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
-        </a>
-        <ul class="navbar-nav flex-row ms-auto">
-            <li class="nav-item me-5">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="team.html">Team</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-        <button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
+      <a class="navbar-brand" href="../index.html"><img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid"></a>
+      <ul class="navbar-nav flex-row ms-auto">
+        <li class="nav-item me-5">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="services.html">Services</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="team.html">Team</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul><button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
     </div>
-</nav>
-
-<div class="container form-container mt-5">
-  <h1 class="text-center">Book an Appointment</h1>
-  <form>
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="firstName" class="form-label">First Name</label>
-        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
+  </nav>
+  <div class="container form-container mt-5">
+    <h1 class="text-center">Book an Appointment</h1>
+    <form>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="firstName" class="form-label">First Name</label> <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required="">
+        </div>
+        <div class="col-md-6">
+          <label for="lastName" class="form-label">Last Name</label> <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required="">
+        </div>
       </div>
-      <div class="col-md-6">
-        <label for="lastName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email address</label> <input type="email" class="form-control" id="email" placeholder="Enter your email" required="">
       </div>
-    </div>
-    <div class="mb-3">
-      <label for="email" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-    </div>
-    <div class="mb-3">
-      <label for="phone" class="form-label">Phone Number</label>
-      <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required>
-    </div>
-    <div class="mb-3">
-      <label for="stylist" class="form-label">Choose Stylist</label>
-      <select class="form-select" id="stylist" required>
-        <option selected disabled>Select your stylist</option>
-        <option value="Liam Jenning">Liam Jenning</option>
-        <option value="Emily Brown">Emily Brown</option>
-        <option value="Lisa Caufield">Lisa Caufield</option>
-      </select>
-    </div>
-    <div class="mb-3">
-      <label for="service" class="form-label">Choose Services</label>
-      <select class="form-select" id="service" multiple required>
-        <option value="Haircut">Haircut</option>
-        <option value="Coloring">Coloring</option>
-        <option value="Styling">Styling</option>
-        <option value="Shaving">Shaving</option>
-        <option value="Perm">Perm</option>
-        <option value="Straightening">Straightening</option>
-      </select>
-      <small class="form-text text-muted">Hold down the Ctrl (Windows) or Command (Mac) button to select multiple options.</small>
-    </div>
-    <div class="mb-3">
-      <label for="date" class="form-label">Appointment Date</label>
-      <input type="date" class="form-control" id="date" required>
-    </div>
-    <div class="mb-3">
-      <label for="time" class="form-label">Appointment Time</label>
-      <input type="time" class="form-control" id="time" required>
-    </div>
-    <div class="mb-3">
-      <label for="message" class="form-label">Special Requests</label>
-      <textarea class="form-control" id="message" rows="3" placeholder="Enter any special requests"></textarea>
-    </div>
-    <div class="mt-3 button-center">
-      <button type="submit" class="btn complete-booking" onclick="window.location.href='confirmation.html'">Complete Booking</button>
-    </div>
-  </form>
-  <div class="row mt-4">
-    <div class="col-12">
-      <div style="height: 0.5rem;"></div> 
+      <div class="mb-3">
+        <label for="phone" class="form-label">Phone Number</label> <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required="">
+      </div>
+      <div class="mb-3">
+        <label for="stylist" class="form-label">Choose Stylist</label> <select class="form-select" id="stylist" required="">
+          <option selected disabled>
+            Select your stylist
+          </option>
+          <option value="Liam Jenning">
+            Liam Jenning
+          </option>
+          <option value="Emily Brown">
+            Emily Brown
+          </option>
+          <option value="Lisa Caufield">
+            Lisa Caufield
+          </option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="service" class="form-label">Choose Services</label> <select class="form-select" id="service" multiple required="">
+          <option value="Haircut">
+            Haircut
+          </option>
+          <option value="Coloring">
+            Coloring
+          </option>
+          <option value="Styling">
+            Styling
+          </option>
+          <option value="Shaving">
+            Shaving
+          </option>
+          <option value="Perm">
+            Perm
+          </option>
+          <option value="Straightening">
+            Straightening
+          </option>
+        </select> <small class="form-text text-muted">Hold down the Ctrl (Windows) or Command (Mac) button to select multiple options.</small>
+      </div>
+      <div class="mb-3">
+        <label for="date" class="form-label">Appointment Date</label> <input type="date" class="form-control" id="date" required="">
+      </div>
+      <div class="mb-3">
+        <label for="time" class="form-label">Appointment Time</label> <input type="time" class="form-control" id="time" required="">
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Special Requests</label> 
+        <textarea class="form-control" id="message" rows="3" placeholder="Enter any special requests"></textarea>
+      </div>
+      <div class="mt-3 button-center">
+        <button type="submit" class="btn complete-booking" onclick="window.location.href='confirmation.html'">Complete Booking</button>
+      </div>
+    </form>
+    <div class="row mt-4">
+      <div class="col-12">
+        <div style="height: 0.5rem;"></div>
+      </div>
     </div>
   </div>
-</div>
-
 </body>
 </html>
