--- a/Views/contact.html
+++ b/Views/contact.html
@@ -7,37 +7,33 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-    </style>
+  </style>
 </head>
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
-        </a>
-        <ul class="navbar-nav flex-row ms-auto">
-            <li class="nav-item me-5">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="team.html">Team</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-        <button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
+      <a class="navbar-brand" href="../index.html"><img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid"></a>
+      <ul class="navbar-nav flex-row ms-auto">
+        <li class="nav-item me-5">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="services.html">Services</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="team.html">Team</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul><button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
     </div>
-</nav>
-
-<div class="container mt-5">
+  </nav>
+  <div class="container mt-5">
     <div class="row">
       <div class="col-12 text-center">
         <h1>Get In Touch</h1>
@@ -45,16 +41,15 @@
     </div>
     <div class="row mt-3">
       <div class="col-md-6 text-center">
-        <a href="mailto:example@example.com" class="me-3"><i class="bi bi-envelope-at-fill" style="font-size: 3rem;color: #FF9533;"></i></a>
+        <a href="tel:1234567890" class="me-3"><i class="bi bi-telephone-fill" style="font-size: 3rem;color: #FF9533;"></i></a>
         <p class="mt-3 contact-info">Themanedeal@gmail.com</p>
       </div>
       <div class="col-md-6 text-center">
-        <a href="tel:1234567890" class="me-3"><i class="bi bi-telephone-fill" style="font-size: 3rem;color: #FF9533;"></i></a>
+        <a href="mailto:example@example.com" class="me-3"><i class="bi bi-envelope-at-fill" style="font-size: 3rem;color: #FF9533;"></i></a>
         <p class="mt-3 contact-info">123-456-7890</p>
       </div>
     </div>
   </div>
-
   <div class="container mt-4 mb-3">
     <div class="row">
       <div class="col-md-6 text-center">
@@ -70,12 +65,11 @@
       <div class="col-md-6 text-center">
         <h2 class="mb-2">Salon Address</h2>
         <p>123 Main St, Ottawa, ON, k1A 1A1</p>
-            <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14021.861335262067!2d-75.68851733033825!3d45.41927753045037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cd1a5b4e0790c95%3A0x8946e978f65f570e!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1646950461541!5m2!1sen!2sca" width="500" height="275" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="map-container">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14021.861335262067!2d-75.68851733033825!3d45.41927753045037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cd1a5b4e0790c95%3A0x8946e978f65f570e!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1646950461541!5m2!1sen!2sca" width="500" height="275" style="border:0;" allowfullscreen loading="lazy"></iframe>
+        </div>
       </div>
     </div>
-</div>
-  
-
+  </div>
 </body>
 </html>
