--- a/Views/services.html
+++ b/Views/services.html
@@ -7,37 +7,33 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-    </style>
+  </style>
 </head>
 <body>
   <nav class="navbar bg-dark mb-3">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
-        </a>
-        <ul class="navbar-nav flex-row ms-auto">
-            <li class="nav-item me-5">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="team.html">Team</a>
-            </li>
-            <li class="nav-item me-5">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-        <button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
+      <a class="navbar-brand" href="../index.html"><img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid"></a>
+      <ul class="navbar-nav flex-row ms-auto">
+        <li class="nav-item me-5">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="services.html">Services</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="team.html">Team</a>
+        </li>
+        <li class="nav-item me-5">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul><button class="btn me-5 book-appointment" onclick="window.location.href='booking.html'">Book Appointment</button>
     </div>
-</nav>
-
-<div class="container mt-5">
+  </nav>
+  <div class="container mt-5">
     <div class="row">
       <div class="col-12 text-center">
         <h1>Our Services</h1>
@@ -51,9 +47,9 @@
             <h3 class="card-title text-center">Shave</h3>
             <p>Experience a traditional and refreshing shave, leaving your skin smooth and rejuvenated.</p>
             <ul>
-                <li><strong>Beard fade:</strong> $15</li>
-                <li><strong>Head shave:</strong> $30</li>
-                <li><strong>Hot shave:</strong> $20</li>
+              <li><strong>Beard fade:</strong> $15</li>
+              <li><strong>Head shave:</strong> $30</li>
+              <li><strong>Hot shave:</strong> $20</li>
             </ul>
           </div>
         </div>
@@ -65,10 +61,10 @@
             <h3 class="card-title text-center">Haircut</h3>
             <p>Transform your look with our expert hair cutting and styling services, tailored to suit your individual style and preferences.</p>
             <ul>
-                <li><strong>Woman’s haircut:</strong> $55</li>
-                <li><strong>Kid’s haircut:</strong> $25</li>
-                <li><strong>Men’s haircut:</strong> $40</li>
-                <li><strong>Bangs:</strong> $15</li>
+              <li><strong>Woman’s haircut:</strong> $55</li>
+              <li><strong>Kid’s haircut:</strong> $25</li>
+              <li><strong>Men’s haircut:</strong> $40</li>
+              <li><strong>Bangs:</strong> $15</li>
             </ul>
           </div>
         </div>
@@ -80,10 +76,10 @@
             <h3 class="card-title text-center">Styling</h3>
             <p>Elevate your hairstyle with our professional styling techniques, whether you're looking for sleek sophistication or casual elegance.</p>
             <ul>
-                <li><strong>Blowout:</strong> from $50</li>
-                <li><strong>Heat styling:</strong> from $35</li>
-                <li><strong>Bridal:</strong> from $350</li>
-              </ul>
+              <li><strong>Blowout:</strong> from $50</li>
+              <li><strong>Heat styling:</strong> from $35</li>
+              <li><strong>Bridal:</strong> from $350</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -96,9 +92,9 @@
             <h3 class="card-title text-center">Perms</h3>
             <p>Achieve beautiful and long-lasting curls or waves with our perm services, adding volume and texture to your hair.</p>
             <ul>
-                <li><strong>Full perm:</strong> $100</li>
-                <li><strong>Specialty perm:</strong> $125</li>
-              </ul>
+              <li><strong>Full perm:</strong> $100</li>
+              <li><strong>Specialty perm:</strong> $125</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -109,8 +105,8 @@
             <h3 class="card-title text-center">Straightening</h3>
             <p>Say goodbye to frizz and hello to silky-smooth locks with our hair straightening treatments, leaving your hair effortlessly sleek and manageable.</p>
             <ul>
-                <li><strong>Curl reduction:</strong> $130</li>
-                <li><strong>Thermal curl service:</strong> $300</li>
+              <li><strong>Curl reduction:</strong> $130</li>
+              <li><strong>Thermal curl service:</strong> $300</li>
             </ul>
           </div>
         </div>
@@ -122,22 +118,20 @@
             <h3 class="card-title text-center">Coloring</h3>
             <p>Enhance your natural beauty or try something new with our range of hair coloring services, from subtle highlights to bold and vibrant hues.</p>
             <ul>
-                <li><strong>Color:</strong> from $90</li>
-                <li><strong>Full highlights:</strong> $120</li>
-                <li><strong>Partial highlights:</strong> $65</li>
-                <li><strong>Grey blending:</strong> $30</li>
-              </ul>
+              <li><strong>Color:</strong> from $90</li>
+              <li><strong>Full highlights:</strong> $120</li>
+              <li><strong>Partial highlights:</strong> $65</li>
+              <li><strong>Grey blending:</strong> $30</li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="row mt-4">
         <div class="col-12">
-          <div style="height: 3rem;"></div> 
+          <div style="height: 3rem;"></div>
         </div>
       </div>
     </div>
   </div>
-  
-
 </body>
 </html>
