--- a/Views/confirmation.html
+++ b/Views/confirmation.html
@@ -39,7 +39,7 @@
       <i class="bi bi-check-circle-fill checkmark" style="font-size: 6rem;color: #39911f;"></i>
     </div>
     <div class="row mt-5">
-      <div class="col-md-6">
+      <div class="col-md-6 offset-md-1">
         <h2 class="mb-4">Booking Confirmation</h2>
         <div class="confirmation-details">
           <p><strong>Booking #:</strong> ABC123</p>
@@ -49,7 +49,7 @@
           <p><strong>Date/Time:</strong> 2024-06-10, 10:00 AM</p>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="text-center">
           <h2 class="mb-4">To cancel or reschedule</h2><button class="btn btn-contact" onclick="window.location.href='contact.html'">Contact</button>
         </div>
