--- a/Views/booking.html
+++ b/Views/booking.html
@@ -86,7 +86,7 @@
           <option value="Straightening">
             Straightening
           </option>
-        </select> <small class="form-text text-muted">Hold down the Ctrl (Windows) or Command (Mac) button to select multiple options.</small>
+        </select> <small class="form-text text-muted">Hold down the <kbd>Ctrl (Windows)</kbd> or <kbd>Command (Mac)</kbd> button to select multiple options.</small>
       </div>
       <div class="mb-3">
         <label for="date" class="form-label">Appointment Date</label> <input type="date" class="form-control" id="date" required="">
